Bug 1019486 - [OSE 2.0] The logo in the ui should say Openshift Enterrpise.

--- a/console/app/assets/stylesheets/console/_mixins.scss
+++ b/console/app/assets/stylesheets/console/_mixins.scss
@@ -10,9 +10,9 @@
 }
 
 @mixin brand_ie {
-  background: image-url('logo-origin.png') no-repeat 0 50%;
-  height: 55px;
-  width: 133px;
+  background: image-url('logo-enterprise-horizontal.png') no-repeat 0 50%;
+  height: 37px;
+  width: 375px;
 }
 
 @mixin panel_default_boxshadow {
